# simple-rest

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  default.nix  docker-compose.yml  hie.yaml  my-project.cabal  nixpkgs.json  package.nix  shell.nix  simple-rest.cabal
app/: Main.hs
app/Src/: Config.hs  DB.hs  KVS.hs  Logging.hs  Persistent.hs  Servant.hs  Session.hs  Store.hs
app/Src/Entity/: Book.hs
