cabal-version:      2.4
name:               my-project
version:            0.1.0.0

author:             IRySoCool
maintainer:         irysocool116@gmail.com
copyright:          IRySoCool
license:            WTFPL
license-file:       LICENSE
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable my-project
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Src.Store
        Src.Logging
        Src.Servant
        Src.Config

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    ghc-options: -fplugin=Polysemy.Plugin

    default-extensions: TypeApplications
                        TupleSections
                        LambdaCase
                        GADTs
                        PolyKinds
                        TemplateHaskell
                        TypeOperators
                        DataKinds
                        FlexibleContexts
                        ScopedTypeVariables
                        DeriveAnyClass
                        DeriveGeneric
                        OverloadedStrings
                        StandaloneDeriving

    build-depends: base
                 , mtl
                 , warp
                 , text
                 , containers
                 , monad-logger
                 , aeson
                 , optparse-generic
                 , servant
                 , servant-server
                 , polysemy
                 , polysemy-plugin
                 , persistent
                 , persistent-postgresql
                 
    hs-source-dirs:   app
    default-language: Haskell2010
