cabal-version:      2.4
name:               simple-rest
version:            0.1.0.0

author:             IRySoCool
maintainer:         irysocool116@gmail.com
copyright:          IRySoCool
license:            WTFPL
license-file:       LICENSE

extra-source-files: CHANGELOG.md

executable my-project
    main-is:          Main.hs

    other-modules:
        Src.Logging
        Src.Servant
        Src.Config
        Src.Persistent

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    ghc-options: -fplugin=Polysemy.Plugin

    default-extensions: TypeApplications
                        TupleSections
                        LambdaCase
                        GADTs
                        PolyKinds
                        TemplateHaskell
                        TypeOperators
                        DataKinds
                        FlexibleContexts
                        ScopedTypeVariables
                        DeriveAnyClass
                        DeriveGeneric
                        OverloadedStrings
                        StandaloneDeriving

    build-depends: base
                 , mtl
                 , warp
                 , text
                 , time
                 , vector
                 , containers
                 , bytestring
                 , profunctors
                 , monad-logger
                 , aeson
                 , optparse-generic
                 , servant
                 , servant-server
                 , polysemy
                 , polysemy-plugin
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , resource-pool
                 
    hs-source-dirs:   app
    default-language: Haskell2010
